[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poker-utils"
version = "0.1.0"
description = "Poker utilities and board texture analysis"
requires-python = ">=3.8"
authors = [
    {name = "Your Name"}
]
dependencies = [
    "pyfiglet>=0.8.post1",
    "mouse>=0.7.1"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0"
]

[project.scripts]
pu = "poker_utils.pu:main" 